2008-03-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Move dialog to
	  XmlEditorService.
	* MonoDevelop.XmlEditor/RunXslTransformCommand.cs,
	  MonoDevelop.XmlEditor/AssignStylesheetCommand.cs: Moved
	  implementation into XmlEditorService and XmlTextEditorExtension.
	* MonoDevelop.XmlEditor/ClosingBracketCompletionDataProvider.cs: Fix
	  previous character index.
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Implement commands,
	  based on code from command classes.
	* MonoDevelop.XmlEditor/XmlEditorService.cs: Move more command
	  implementations to editor service and refactor heavily.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.
	* MonoDevelop.XmlEditor.addin.xml: Enable most of the XML commands.

2008-03-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor/XmlSchemaManager.cs: Actually use merged schema
	  collection.
	* MonoDevelop.XmlEditor/XmlCompletionData.cs: Remove unnecessary
	  reference to inherited interface.
	* MonoDevelop.XmlEditor/GoToSchemaDefinitionCommand.cs,
	  MonoDevelop.XmlEditor/CreateSchemaCommand.cs,
	  MonoDevelop.XmlEditor/FormatXmlCommand.cs,
	  MonoDevelop.XmlEditor/ValidateXmlCommand.cs: Moved implementation
	  into XmlEditorService and XmlTextEditorExtension.
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Implement XMl
	  commands, based on code from command classes.
	* MonoDevelop.XmlEditor/XmlSchemaCompletionDataCollection.cs: Add
	  IEnumerable implementation to merged collection.
	* MonoDevelop.XmlEditor/XmlEditorService.cs: Move much of command
	  implementations to editor service and refactor heavily.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.

2008-03-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Workaround bug in mono
	  1.2.4 where usings are ignored inside anonymous methods.

2008-03-19  Michael Hutchinson <mhutchinson@novell.com> 
